added intro text with formatting.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -224,6 +224,10 @@ a:hover {
   /*color: #2a353d; */
 }
 
+a:active {
+  opacity: .5;
+}
+
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
