--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,7 @@ About Page - JavaScript
 
 	#rightgraph .axis text {
 		font-size: .9em;
+		font-weight: 600;
 	}
 
 .grid line,
@@ -600,7 +601,7 @@ About Page - JavaScript
 }
 
 .grid .tick line {
-	stroke: #3f505e;
+	stroke: #d9dcdf;
 }
 
 .grid text {
