--- a/css/style.css
+++ b/css/style.css
@@ -576,34 +576,38 @@ About Page Specific
 About Page - JavaScript
 ***************************/
 
-.axis line,
-.axis path {
-  fill: none;
-  stroke: #3f505e;
-  shape-rendering: crispEdges;
-}
-
 #rightgraph text {
 	fill: #3f505e;
 	font-size: 1.2em;
 }
 
+#rightgraph rect {
+	opacity: 0.8;
+}
+
 	#rightgraph .axis text {
-		font-size: .9em;
+		font-size: .80em;
 		font-weight: 600;
 	}
 
-.grid line,
-.grid path {
-	fill: none;
-  	stroke: none;
-  	shape-rendering: crispEdges;
-}
+	.axis line,
+	.axis path {
+	  fill: none;
+	  stroke: #3f505e;
+	  shape-rendering: crispEdges;
+	}
 
-.grid .tick line {
-	stroke: #d9dcdf;
-}
+	.grid line,
+	.grid path {
+		fill: none;
+	  	stroke: none;
+	  	shape-rendering: crispEdges;
+	}
 
-.grid text {
-	display: none;
-}
+	.grid .tick line {
+		stroke: #d9dcdf;
+	}
+
+	.grid text {
+		display: none;
+	}
