duplicated to two charts, made responsive because 'resize' function was being overridden with two separate javascript files.

--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,11 @@ About Page Specific
 About Page - JavaScript
 ***************************/
 
+.graphs {
+	display: block;
+	width: 100%;
+}
+
 #rightgraph text {
 	fill: #3f505e;
 	font-size: 1.2em;
