--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,25 @@
 Front Page & General
 ***************************/
 
+.regular {
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+	@media (min-width: 550px) {
+		.regular {
+			margin-left: 2em;
+			margin-right: 2em;
+		}
+	}
+
+	@media (min-width: 1000px) {
+		.regular {
+			margin-left: 4em;
+			margin-right: 4em;
+		}
+	}
+
 #header {
   	padding: 15px 0px;
 	background: #87c3ff; /* Old browsers */
@@ -64,7 +83,7 @@ Front Page & General
 	overflow: hidden;
 }
 
-	#bannerimg {
+	#banner-img {
 		background: #bddeff; /* Old browsers */
 		background: -moz-linear-gradient(top,  #bddeff 0%, #bddeff 70%, #ffffff 95%, #ffffff 100%); /* FF3.6+ */
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#bddeff), color-stop(60%,#bddeff), color-stop(95%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
@@ -132,7 +151,7 @@ Front Page & General
 	}
 
 
-	#profilepic {
+	#profile-pic {
 		display: block;
 		margin-left: auto;
 		margin-right: auto; 
@@ -172,158 +191,140 @@ Front Page & General
 	    }
 	}
 
-#whatido {
+#what-i-do {
 	display: block;
 }
   
-	#whatido h3{
-		margin: 2em auto 2rem auto;
+	#what-i-do h3{
+		margin: 2.5rem auto 2rem auto;
 	}
 
-	#ido1 {
+	#i-do-1 {
 		width: 115px;
 	}
 
-	#ido2 {
+	#i-do-2 {
 		width: 140px;
 	}
 
-	#ido3 {
+	#i-do-3 {
 		width: 135px;
 	}
 
-	#whatido .whatrow {
-		padding-top: 3em;
+	#what-i-do .what-row {
+		margin-top: 2em;
 	}
 
-	#whatido .tagline {
+	#what-i-do .tag-line {
 		text-align: center;
 		margin-bottom: 0;
 	}
 
-	#whatido .even-img {
+	#what-i-do .even-img {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: 1.4em;
 		width: 10em;
 	}
 
-	#whatido .even-text {
+	#what-i-do .even-text {
 		text-align: center;
 	}
 
-	#whatido .odd-img {
+	#what-i-do .odd-img {
 	    display: block;
 	    margin-left: auto;
 	    margin-right: auto;
-	    margin-top: 1.4em;
 	    width: 10em;
 	}
 
-	#whatido .odd-text {
+	#what-i-do .odd-text {
 		text-align: center;
+	}
+
+	#what-i-do .wid-icon {
+		/*position: relative;*/
+		margin-top: 2.5rem;
+		/*top: 50%;*/
 	}
 
 	@media (min-width: 550px) {
 
-		#whatido h3{
-			margin: 2em auto 2rem 0;
+		#what-i-do h3{
+			margin: 2.5rem auto 2rem 0;
 		}
 
-	    #whatido .even-img {
+	    #what-i-do .even-img {
 		    float: right;
 		    text-align: left;
 		    height: 100%;
 	    }
 
-	    #whatido .even-text {
+	    #what-i-do .even-text {
 		    float:left:;
 		    width: 87%;
 		    text-align: left;
 	    }
 
-	    #whatido .odd-img {
+	    #what-i-do .odd-img {
 		    position: relative;
 		    float: left;
 		    left: 150%;
 		    text-align: left;
 	    }
 
-	    #whatido .odd-text {
+	    #what-i-do .odd-text {
 		    position: relative;
 		    float:left;
 		    right: 85%;
 		    width: 115%;
 		    text-align: left;
 	    }
-	}
 
-	@media (min-width: 850px) {
-
-		#whatido .even-img {
-		    margin-top: 1.4em;
-	    }
-
-	    #whatido .even-text {
-		    width: 87%;
-	    }
-
-	    #whatido .odd-img {
-	    	margin-top: 1.4em;
-		    left: 150%;
-	    }
-
-	    #whatido .odd-text {
-		    right: 85%;
-		    width: 115%;
-	    }
+	    #what-i-do .wid-icon {
+			margin-top: 2.5rem;
+		}
 	}
 
 	@media (min-width: 1000px) {
 
-		#whatido .even-img {
-		    margin-top: .8em;
-	    }
-
-	    #whatido .even-text {
+	    #what-i-do .even-text {
 		    width: 80%;
 	    }
 
-	    #whatido .odd-img {
-	    	margin-top: .8em;
+	    #what-i-do .odd-img {
 		    left: 150%;
 	    }
 
-	    #whatido .odd-text {
+	    #what-i-do .odd-text {
 		    right: 75%;
 		    width: 110%;
 	    }
 	}
 
 
-#whatisolve {
+#what-i-solve {
 }
 
-	#whatisolve p {
+	#what-i-solve p {
 		max-width: 500px;
 		margin: 0 auto 3em auto;
 	}
 
-	#isolve1 {
+	#i-solve-1 {
 		width: 220px;
 	}
 
-	#isolve2 {
+	#i-solve-2 {
 		width: 250px;
 	}
 
 
-		#whatisolve-last p {
+		#what-i-solve-last p {
 			margin-bottom: 0em;
 		}
 		
-	#whatisolve img {
+	#what-i-solve img {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -331,40 +332,40 @@ Front Page & General
 	}
 
 		@media (min-width: 680px){
-			#whatisolve img {
+			#what-i-solve img {
 				width: 600px;
 			}
 		}
 
-#whatelse {
+#what-else {
 }
 
-	#endnote p {
+	#end-note p {
 		padding: 2em 0;
 		margin: 0 auto;
 		max-width: 500px;
 	}
 
-	#endnote img {
+	#end-note img {
 		height: .7em;
 		width: auto;
 	}
 
-	#whatelse .first-b {
+	#what-else .first-b {
 		
 	}
 
-	#whatelse .second-b {
+	#what-else .second-b {
 		margin-top: 2em;
 	}
 
 		@media (min-width: 550px) {
-			#whatelse .first-b{
+			#what-else .first-b{
 				float: right;
 				margin-right: 1em;
 			}
 
-			#whatelse .second-b {
+			#what-else .second-b {
 				float: left;
 				margin-left: 1em;
 				margin-top: 0;
@@ -395,7 +396,7 @@ Front Page & General
 		text-align: center;
 	}
 
-	#footer .footertag {
+	#footer .footer-tag {
 		padding-top: 1em;
 	}
 
@@ -527,7 +528,7 @@ Front Page & General
 About Page Specific
 ***************************/
 
-#bannerimgabout .columns{
+#banner-img-about .columns{
 	width: 48%;
 }
 
@@ -539,54 +540,54 @@ About Page Specific
 	}
 
 
-	#datacenterfreeleft img {
+	#datacenter-free-left img {
 		display: block;
 		float: left;
 		margin-right: 0em;
 		width: 100%;
 	}
 
-	#datacenterfreeright img {
+	#datacenter-free-right img {
 		display: block;
 		float: right;
 		margin-left: 0em;
 		width: 100%;
 	}
 
-		.datacenterfreeright{
+		.datacenter-free-right{
 			float: right;
 		}
 
 	@media (min-width: 390px) {
-		#datacenterfreeleft img {
+		#datacenter-free-left img {
 			width: auto;
 		}
 
-		#datacenterfreeright img {
+		#datacenter-free-right img {
 			width: auto;
 		}
 	}
 
 	@media (min-width: 530px) {
-		#datacenterfreeleft img {
+		#datacenter-free-left img {
 			margin-right: 4em;
 			float: right;
 		}
 
-		#datacenterfreeright img {
+		#datacenter-free-right img {
 			margin-left: 4em;
 			float: left;
 		}
 	}
 
-	#bannerimgabout {
+	#banner-img-about {
 		background: #bddeff; /* Old browsers */
-		background: -moz-linear-gradient(top,  #bddeff 0%, #ffffff 80%, #ffffff 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#bddeff), color-stop(80%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top,  #bddeff 0%,#ffffff 80%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top,  #bddeff 0%,#ffffff 80%,#ffffff 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top,  #bddeff 0%,#ffffff 80%,#ffffff 100%); /* IE10+ */
-		background: linear-gradient(to bottom,  #bddeff 0%,#ffffff 80%,#ffffff 100%); /* W3C */
+		background: -moz-linear-gradient(top,  #bddeff 0%, #ffffff 70%, #ffffff 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#bddeff), color-stop(70%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #bddeff 0%,#ffffff 70%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #bddeff 0%,#ffffff 70%,#ffffff 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #bddeff 0%,#ffffff 70%,#ffffff 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  #bddeff 0%,#ffffff 70%,#ffffff 100%); /* W3C */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bddeff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 	}
 
@@ -600,104 +601,104 @@ About Page Specific
 		}
 	}
 
-#aboutintro h2 {
-	margin-top: 1em;
+#about-intro h2 {
+	margin-top: 2rem;
 }
 
-#aboutintro p {
+#about-intro p {
 	margin: 0 auto;
 	max-width: 485px;
 	margin-bottom: 2em;
 	text-align: center;
 }
 
-#aboutskills svg {
+#about-skills svg {
 	margin-top: 1em;
 }
 
-#leftgraph svg {
+#left-graph svg {
 	margin-bottom: 1em;
 }
 
 	@media (min-width: 550px) {
-		#leftgraph svg {
+		#left-graph svg {
 			margin-bottom: 0em;
 		}
 	}
 
-#aboutskills .skillnames h3{
+#about-skills .skill-names h3{
 	margin-top: 1em;
 }
 
-#appliedmath {
+#applied-math {
 	text-align: center;
 }
 
-#appliedmath h3 {
+#applied-math h3 {
 	text-align: center;
 	width: 220px;
 }
 
 	@media (min-width: 550px) {
 
-		#appliedmath h3{
+		#applied-math h3{
 			margin-right: 0;
 			width: auto
 		}
 	}
 
 	@media (min-width: 638px) {
-		#appliedmath h3 {
+		#applied-math h3 {
 			width: 220px;
 		}
 	}
 
-#plussign {
+#plus-sign {
 	display: none;
 	text-align: center;
 	
 }
 
 	@media (min-width: 550px) {
-		#plussign {
+		#plus-sign {
 			display: inline;
 		}
 
-		#plussign h3 {
+		#plus-sign h3 {
 			border-bottom: none;
 			width: auto;
 		}
 	}
 
-#computerprogram {
+#computer-program {
 	display: none;
 	text-align: center;
 }
 
-#computerprogram h3 {
+#computer-program h3 {
 	text-align: center;
 	width: 240px;
 	min-width: 190px;
 }
 
 	@media (min-width: 550px) {
-		#computerprogram {
+		#computer-program {
 			display: inline;
 		}
 
-		#computerprogram h3 {
+		#computer-program h3 {
 			margin-left: 0;
 			width: auto;
 		}
 	}
 
 	@media (min-width: 695px) {
-		#computerprogram h3 {
+		#computer-program h3 {
 			width: 240px;
 		}
 	}
 
-#computerprogram2 {
+#computer-program2 {
 	text-align: center;
 	display: block;
 	width: 240px;
@@ -705,22 +706,73 @@ About Page Specific
 }
 
 	@media (min-width: 550px) {
-		#computerprogram2 {
+		#computer-program2 {
 			display: none;
 		}
 	}
 
-#profile_network img {
+#profile-network img {
 	display: block;
 	margin: 0 auto;
 	width: 100%;
 }
 
 	@media (min-width: 340px) {
-		#profile_network img {
+		#profile-network img {
 			width: 290px;
 		}
 	}
+
+#about-education .edu-banner {
+	height: 400px;
+	margin-bottom: 2rem;
+}
+
+	#about-education .banner .banner-bg {
+		z-index: -1;
+	}
+
+	#about-education h3 {
+		margin-top: 0;
+	}
+
+	.education-content {
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+	}
+
+	.banner-content {
+		position: relative;
+		top: -360px;
+		width: 262px;
+		margin: 0 auto;
+	}
+
+	.banner-content p {
+		margin: 0;
+	}
+
+	.banner-content .italic{
+		font-style: italic;
+	}
+
+
+	.banner-content .italic-end{
+		margin-bottom: 2rem;
+	}
+
+	.banner-content .banner-details{
+		font-size: 1.4rem;
+	}
+
+	.interests-row {
+		margin-top: 2rem;
+	}
+
+	.interest {
+		margin-bottom: 1rem;
+	}
+
 
 /***************************
 About Page - JavaScript
@@ -731,37 +783,37 @@ About Page - JavaScript
 	width: 100%;
 }
 
-#rightgraph {
+#right-graph {
 	margin: 0 1em;
 }
 
 	@media (min-width: 550px) {
-		#rightgraph {
+		#right-graph {
 			margin: 0 2em 0 0;
 		}
 	}
 
 	@media (min-width: 1000px) {
-		#rightgraph {
+		#right-graph {
 			margin: 0 4em 0 0;
 		}
 	}
 
-	#rightgraph text {
+	#right-graph text {
 		fill: #3f505e;
 		font-size: 1.2em;
 	}
 
-	#rightgraph rect {
+	#right-graph rect {
 		opacity: 0.8;
 	}
 
-	#rightgraph .axis text {
+	#right-graph .axis text {
 		font-size: .8em;
 		font-weight: 600;
 	}
 
-	#rightgraph .legendtext {
+	#right-graph .legendtext {
 		font-size: .8em;
 		font-weight: 600;
 	}
@@ -789,39 +841,39 @@ About Page - JavaScript
 	}
 
 
-#leftgraph {
+#left-graph {
 	margin: 0 1em;
 }
 
 	@media (min-width: 550px) {
-		#leftgraph {
+		#left-graph {
 			margin: 0 0 0 2em;
 
 		}
 	}
 
 	@media (min-width: 1000px) {
-		#leftgraph {
+		#left-graph {
 			margin: 0 0 0 4em;
 
 		}
 	}
 
-	#leftgraph text {
+	#left-graph text {
 		fill: #3f505e;
 		font-size: 1.2em;
 	}
 
-	#leftgraph rect {
+	#left-graph rect {
 		opacity: 0.8;
 	}
 
-	#leftgraph .axis text {
+	#left-graph .axis text {
 		font-size: .8em;
 		font-weight: 600;
 	}
 
-	#leftgraph .legendtext1 {
+	#left-graph .legendtext1 {
 		font-size: .8em;
 		font-weight: 600;
 	}
@@ -848,11 +900,11 @@ About Page - JavaScript
 		display: none;
 	}
 
-	#leftgraph .y text {
+	#left-graph .y text {
 		display: none;
 	}
 
-	#leftgraph .y path {
+	#left-graph .y path {
 		stroke: none;
 	}
 
