--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -180,6 +180,7 @@ h3 {
   padding-bottom: .3em;
   border-bottom: solid #d8dcdf;
   border-bottom-width: 1px;
+  text-align: center;
 }
 
 h1 { font-size: 5.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
