removed unnecessary styling in education content margin bottom.

--- a/css/style.css
+++ b/css/style.css
@@ -786,7 +786,7 @@ About Page Specific
 
 	.education-content {
 		margin-top: 2rem;
-		margin-bottom: 2rem;
+		/*margin-bottom: 2rem;*/
 	}
 
 	.banner-content {
