adjusted h2 margins and unsorted list text align and list-style

--- a/css/style.css
+++ b/css/style.css
@@ -1026,3 +1026,17 @@ About Page - JavaScript
 		stroke: none;
 	}
 
+/***************************
+Work Page Specific
+***************************/
+
+#work-projects h2 {
+	margin-top: 2rem;
+}
+
+#work-projects ul {
+	list-style-type: none;
+	text-align: center;
+}
+
+
