edited the style of sources text to fixed width of 500px to match style of site.

--- a/css/style.css
+++ b/css/style.css
@@ -1068,4 +1068,10 @@ Work Page Specific
 	text-align: center;
 }
 
+#work-source p {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+}
+
 
