--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -183,6 +183,10 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  font-weight: 400;
+}
+
 h1 { font-size: 5.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 4.0rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
