added max width to paragraphs in work-line page

--- a/css/style.css
+++ b/css/style.css
@@ -1095,6 +1095,13 @@ Work Page Summary
 Work Page Specific
 ***************************/
 
+#line p {
+	max-width: 500px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 #line-intro h2 {
 	font-weight: 300;
 	font-size: 5rem;
