moved link outside of h3 text such that hover does not change opacity of h3. also removed text decoration from the thumbnail descriptions

--- a/css/style.css
+++ b/css/style.css
@@ -1062,9 +1062,12 @@ Work Page Summary
 		transition: opacity .3s ease-in-out;
 	}
 
-	.thumbs:hover > .thumbs-pic {
-		opacity: 0.7;
+	.thumbs-link {
+		text-decoration: none;
 	}
+	/*.thumbs:hover {
+		opacity: 0.7;
+	}*/
 
 	#work-projects .thumbs img {
 		width: 90%;
