--- a/css/style.css
+++ b/css/style.css
@@ -1105,7 +1105,7 @@ Work Page Specific
 	margin-right: auto;
 }
 
-#line-intro h2 {
+#line-intro {
 	font-weight: 300;
 	font-size: 5rem;
 	margin-top: 2rem;
