added non-active-button class to thumbs to disable links and show that project description is not ready

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,12 @@ Front Page & General
 				   opacity: .2;
 				}
 
+				.not-active-button {
+				   pointer-events: none;
+				   cursor: default;
+				   opacity: .6;
+				}
+
 
 #banner {
 	background: #bddeff;
