added line-mock png and css to center and expand to width of container

--- a/css/style.css
+++ b/css/style.css
@@ -1148,4 +1148,23 @@ Work Page Specific
 	margin-top: 1em;
 	margin-bottom: 2em;
 	z-index: 300;
-}
+}#line-mock img {
+	  	width:100%;
+	  	margin-bottom: 3em;
+			padding-top: 1.2em;
+			-webkit-transition: margin-bottom .5s ease;
+			-moz-transition: margin-bottom .5s ease;
+			-o-transition: margin-bottom .5s ease;
+			-ms-transition: margin-bottom .5s ease;
+			transition: margin-bottom .5s ease;
+			display: block;
+      margin-left: auto;
+      margin-right: auto;
+      z-index:190;
+	}
+
+	@media (min-width: 1000px) {
+	    #line-mock img {
+	    	width:85%;
+	    }
+	}
